fix bug to remove side scrollbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,6 +173,6 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-bottom: 3%;
+        padding-bottom: 2%;
     }
 }
